test/pass/test_import/import_depending.sest
import ImportDepended

module ImportDepending = struct

  val main(args) =
    print_debug(ImportDepended.hello())

end
