test/fail/error_cyclic/error_cyclic_bar.sest
import ErrorCyclicFoo

module ErrorCyclicBar = struct
  val main() = {}
end
